--- a/source/repos/BTL_Food/BTL_Food/styles/Home.css
+++ b/source/repos/BTL_Food/BTL_Food/styles/Home.css
@@ -1,4 +1,4 @@
-﻿/* styles/home.css */
+/* styles/home.css */
 @font-face {
     font-family: 'Locket'; /* Nên đặt tên trong dấu nháy */
     src: url('../Font/locket.otf') format('opentype'), /* Sửa "otf" thành "opentype" */
